--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "backendchai",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx nodemon src/index.js"
   },
   "keywords": [
     "Chai",
@@ -12,5 +13,11 @@
     "Code"
   ],
   "author": "Jayash Saini",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "devDependencies": {
+    "prettier": "3.1.1"
+  }
 }
