--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon src/index.js"
+    "dev": "npx nodemon -r  dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "Chai",
@@ -15,9 +15,14 @@
   "author": "Jayash Saini",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "^3.0.2"
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
+    "nodemon": "^3.0.2",
     "prettier": "3.1.1"
   }
 }
