--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backendchai",
   "version": "1.0.0",
-  "description": "",
+  "description": "Welcome to the YouTube Backend System – a robust and efficient server-side solution for managing YouTube-like applications. Crafted with precision and scalability in mind, this project showcases production-level code written primarily in JavaScript. Leveraging a powerful stack of technologies, our backend seamlessly integrates MongoDB, Mongoose, Multer, Aggregation Pipeline, Nodemon, Cloudinary, Cors, Bcrypt, JSON Web Token, Cookie-Parser, and Express to provide a comprehensive and reliable infrastructure.",
   "type": "module",
   "main": "index.js",
   "scripts": {
@@ -17,18 +17,18 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cloudinary": "^1.41.1",
+    "cloudinary": "^2.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
+    "mongoose": "^8.1.1",
     "mongoose-aggregate-paginate": "^2.0.2",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
+    "nodemon": "^3.0.3",
     "prettier": "3.1.1"
   }
 }
